fix(settings-pane): overflow problem

--- a/packages/plugin-settings-pane/src/style.less
+++ b/packages/plugin-settings-pane/src/style.less
@@ -34,15 +34,14 @@
 .lc-settings-main {
   position: relative;
   height: 100%;
+  overflow: hidden;
 
   .lc-settings-notice {
     text-align: center;
     font-size: 12px;
     font-family: PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica,Arial,sans-serif;
     color: var(--color-text ,rgba(0,0,0,.6));
-    margin: 50px 15px 0;
-    overflow: hidden;
-    padding: 15px 0;
+    padding: 50px 15px 0;
   }
 
   .lc-settings-navigator {
